--- a/gb/25/12/3/n14648282.md
+++ b/gb/25/12/3/n14648282.md
@@ -8,64 +8,59 @@
 <p>【大纪元2025年12月04日讯】（大纪元记者王兰多伦多报导）最新公布的安省学生标准化考试成绩令人失望，学生们在阅读、写作和数学方面进步不足，教育厅长保罗·卡兰德拉（Paul Calandra ）表示，他将任命一个专家咨询机构，对如何支持学生学习进行“全面审查”。</p>
 <p>据CP24报导，卡兰德拉说：“结果显示，尽管我们一直在推行回归基础的教学方法，但学生在阅读、写作，尤其是数学方面的进步仍然不足。六年级学生中有近一半，九年级学生中有42%的数学成绩未达到省级标准。”</p>
 <p>安省教育品质与问责办公室（EQAO）于周三（12月3日）公布了最新的学生考试成绩。此前，卡兰德拉推迟了成绩的公布，原计划在秋季早些时候公布。</p>
-<p>卡兰德拉表示，他推迟公布成绩是因为他想对结果进行“深入研究”。他认为取消EQAO考试并非最佳选择，但“仍有改进的空间”。 “我认为某种形式的测试，例如标准化测试，非常重要，”他说，但补充说，测试结果应该“更快、更频繁地”公布。</p>
+<p>卡兰德拉表示，他推迟公布成绩是因为他想对结果进行“深入研究”。他认为取消EQAO考试并非最佳选择，但“仍有改进的空间”。 “我认为某种形式的测试，例如标准化测试，非常重要。”他说，但补充说，测试结果应该“更快、更频繁地”公布。</p>
 <h2>最新EQAO成绩</h2>
-<p>EQAO周三公布的考试结果反映的是2024-2025学年期间进行的测试。数据显示，英语类学校的成绩较去年整体有所提升但进步不足。</p>
+<p>EQAO周三公布的考试结果反映的是2024-2025学年期间进行的测试。数据显示，英语类学校的成绩较去年整体有所提升，但进步不足。</p>
 <p>具体有：</p>
 <h2>3年级达到或超过省标（相当于成绩单上的A或B）的学生比例为：</h2>
-<p>数学：64%（上升3个百分点）</p>
-<p>阅读：74%（上升3个百分点）</p>
-<p>写作：65%（上升1个百分点）</p>
+<p>数学：64%（上升3个百分点）；</p>
+<p>阅读：74%（上升3个百分点）；</p>
+<p>写作：65%（上升1个百分点）。</p>
 <h2>6年级达到省标的学生比例为：</h2>
-<p>数学：51%（上升1个百分点）</p>
-<p>阅读：86%（上升4个百分点）</p>
-<p>写作：85%（上升5 百分点）</p>
-<p>9年级数学中，58%的学生达到省标（上升 4 个百分点）；</p>
-<p>10年级阅读与写作能力测试（literacy test）首次参加的学生中，有84%达到标准。</p>
+<p>数学：51%（上升1个百分点）；</p>
+<p>阅读：86%（上升4个百分点）；</p>
+<p>写作：85%（上升5 百分点）。</p>
+<p><strong>9年级</strong>数学中，58%的学生达到省标（上升4个百分点）；</p>
+<p><strong>10年级</strong>阅读与写作能力测试（literacy test）首次参加的学生中，有84%达到标准。</p>
 <p>专家顾问小组将在明年初任命，将分析安省在数学、阅读与写作方面对学生的支持情况。其任务包括评估为什么学业进展停滞、教材是否清晰易用、教师培训和支持是否充分，以及学生是否拥有足够工具取得成功。审查也将重点关注学习困难学生，包括特殊教育需求学生的支援措施是否有效。</p>
 <p>当被问及政府为何需要聘请外部专家小组而不是利用教育厅内部人员时，卡兰德拉表示：“如果我们做得对，就不会有50%的学生达不到省级标准。”</p>
-<p>他表示，此次审查“不仅要审查教育厅如何培养教师，还要审查我们为教师和家长提供的资源。”</p>
-<p>“我希望由教育厅以外的人员来审查，因为让过去五十十年来一直掌权的人进行自我审查，未必能得出最佳答案。”</p>
+<p>他表示，此次审查“不仅要审查教育厅如何培养教师，还要审查我们为教师和家长提供的资源”。</p>
+<p>“我希望由教育厅以外的人员来审查，因为让过去五十年来一直掌权的人进行自我审查，未必能得出最佳答案。”</p>
 <p>卡兰德拉将令人失望的测试结果归咎于“教育委员失职”，但他表示，在政府放假之前，不会出台任何修改教委职责的立法。</p>
 <h2>往年EQAO成绩对比：</h2>
 <p>3年级：数学成绩，2023-24学年只有61%学生达标；2021-22年为59%，2022-23 年为60%。阅读与写作在2023-24年与前两年接近，阅读达标率71%、写作为64%。</p>
 <p>6年级： 2023-24年数学仅50%达标，阅读82%、写作80%。与2022-23年相比，数学略升、阅读与写作略降。</p>
-<p>9年级： 数学成绩持续偏低：2023-24 年54%达标，与2021-22年（52%）、2022-23年（54%）接近。</p>
+<p>9年级： 数学成绩持续偏低：2023-24年54%达标，与2021-22年（52%）、2022-23年（54%）接近。</p>
 <p>10年级：阅读写作测试始终稳定表现最好，2023-24年85%学生通过。</p>
 <p>责任编辑：严枫</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647645.md#1">加国大型缉毒行动 查获386公斤芬太尼 逮捕8,136人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647606.md#1">香港大火中痛失童年故居 多伦多港人心碎　　</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647609.md#1">多伦多市长提议对豪宅买家加征土地转让税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647595.md#1">士嘉堡一名垃圾车司机被自己驾驶车辆撞击身亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647591.md#1">安省女子因护照破损被拒入境哥斯达黎加</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646929.md#1">自己找回被偷单车 警方：危险 千万别模仿！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646900.md#1">为省钱 多伦多一些学校只有“半个校长” 家长抱怨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646896.md#1">因应家长投诉 省府监管第六个教育局</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646882.md#1">安省男子超时占用公有营地 被罚2,500元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/21/n9757183.md#1" target="_blank">杨宁： 中共谎言之“三三制政权共享”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/3/16/n8928422.md#1" target="_blank">一位伊朗女子的东方缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/30/n10099688.md#1" target="_blank">共产暴政录：上山下乡运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/22/n11674273.md#1" target="_blank">身心俱悴时喜遇大法 印度母亲人生现转机</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/1/n14472598.md#1">【品读唐诗】登高秋望 吟成古今第一七言律</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644037.md#1">难以归位的怅然若失——解读苏轼《后赤壁赋》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635938.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/9/n14632431.md#1">苏东坡生活禅：东坡肉好吃的珍味秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647538.md#1">【新闻大破解】香港恶火 红祸下系统性崩坏？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647596.md#1">【直播】川普总统为新生儿启动“川普账户”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648191.md#1">【直播】参议院听证会：修复破碎的医疗体系</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14641853.md#1">10款最好的二手SUV 本田CR-V居首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646256.md#1">【独家】这位化学家助美国破解稀土产业难题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645932.md#1">官场动荡 马兴瑞缺席中共政治局学习会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646909.md#1">滨崎步等日星演出受阻 中共外交部发言人甩锅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646964.md#1">梁朝伟被质疑定居日本 宣传电影时首度回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647603.md#1">滨崎步零观众演出后返日 唱片公司会长批中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647639.md#1">胡歌首谈二胎儿子 自认做父亲挺失败</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642052.md#1">太妍Solo十周年发精选辑 向自己过去与未来致意</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647181.md#1">为何冬天时你应该在窗户边放一碗盐？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646574.md#1">为何无条件的感恩会让你幸福？如何培养？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647976.md#1">专家：你的伴侣无条件爱你的3个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647107.md#1">私人飞机飞行员的薪资有多少？有何优缺点？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647816.md#1">为什么每天喝柳橙汁能增进心脏健康？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/3/n14648282.htm">安省EQAO成绩公布 省府：令人失望需改革</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648282.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
